--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
-
+theme: tomotoes
 # Site
 title: Hexo
 subtitle: ''
